--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "to-do-app",
   "version": "1.0.0",
   "description": "CRUD operations practice",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "to-do app",
+    "CRUD"
+  ],
+  "author": "sayed",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
