--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "to-do-app",
   "version": "1.0.0",
   "description": "CRUD operations practice",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "to-do app",
